--- a/tasks/elastic_cluster.yml
+++ b/tasks/elastic_cluster.yml
@@ -1,5 +1,32 @@
 ---
 
+- name: ensure RGM GPG key is installed
+  get_url:
+    dest: /etc/pki/rpm-gpg/RPM-GPG-KEY-rgm
+    url: https://installer.rgm-cloud.io/RPM-GPG-KEY-rgm
+    owner: root
+    group: root
+    mode: 0644
+
+- name: add RGM repos for RGM Community
+  yum_repository:
+    name: "{{ item.name }}"
+    description: "{{ item.descr }}"
+    file: rgm
+    baseurl: "{{ item.url }}"
+    gpgcheck: yes
+    enabled: yes
+    sslverify: yes
+    keepcache: no
+    gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-rgm
+  with_items:
+  - name: 'rgm-community-base'
+    descr: 'RGM Community - Base'
+    url: 'https://community.repo.rgm-cloud.io/rgm/latest/os/x86_64/'
+  - name: 'rgm-community-updates'
+    descr: 'RGM Community - Updates'
+    url: 'https://community.repo.rgm-cloud.io/rgm/latest/updates/x86_64/'
+
 - name: include ES common preliminary tasks
   include_tasks:
     file: elastic_common_pre.yml
@@ -43,7 +70,7 @@
     path: /etc/httpd/conf.d/rgmweb.conf
   register: stat_httpd_rgm
 
-- include_tasks:
-    file: elastic_hq.yml
-  when: stat_httpd_rgm.stat.exists
+#- include_tasks:
+#    file: elastic_hq.yml
+#  when: stat_httpd_rgm.stat.exists
 
