add support for Elasticsearch multi-node cluster (#37)
* Remove fixed IP

* Add TLS1.2 command line

* Fix verbos typo and display beat install args in verbose

* fix ssl.conf

* Add missing ExportConfig api call

* hotfixes (#18)

* Remove fixed IP

* Add TLS1.2 command line

* Fix verbos typo and display beat install args in verbose

* fix ssl.conf

* Add missing ExportConfig api call

* explicitly exclude snmptt pkg from EPEL repo

Co-authored-by: guyomog78 <gaugey@fr.scc.com>

* Dev (#20)

* Remove fixed IP

* Add TLS1.2 command line

* Fix verbos typo and display beat install args in verbose

* fix ssl.conf

* Add missing ExportConfig api call

* explicitly exclude snmptt pkg from EPEL repo

* fix defautl Windows Template name

Co-authored-by: guyomog78 <gaugey@fr.scc.com>
Co-authored-by: Eric Belhomme <ebelhomme@ricozome.net>

* Dev (#23)

* Remove fixed IP

* Add TLS1.2 command line

* Fix verbos typo and display beat install args in verbose

* fix ssl.conf

* Add missing ExportConfig api call

* explicitly exclude snmptt pkg from EPEL repo

* fix defautl Windows Template name

* Fix MetricBeat Windows Installation on Powershell <5.1 (#21)

* Add TLS line

* More resilence

Add function for message display to avoid write-information issues
it was probably the cause of everything

Complete some verbose
Add some try catch

Co-authored-by: guyomog78 <gaugey@fr.scc.com>
Co-authored-by: Michael Aubertin <michael.aubertin@gmail.com>
Co-authored-by: guyomog78 <17220155+guyomog78@users.noreply.github.com>

* fix number of ES index replicas to 0 for Beats (#24)

* fix partners packages URLs (#32)

* Dev (#33)

* fix partners packages URLs

* fix Linux metricbeat installer

* add multi-node ES cluster support
add elasticsearch-HQ

* add grafana dashboards

Co-authored-by: guyomog78 <gaugey@fr.scc.com>
Co-authored-by: Michael Aubertin <michael.aubertin@gmail.com>
Co-authored-by

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -94,6 +94,7 @@ packages_prometheus:
 - prometheus-snmp_exporter
 - prometheus-blackbox_exporter
 - prometheus-ping_exporter
+- prometheus-elasticsearch_exporter
 
 packages_python36:
 - python36
@@ -126,6 +127,15 @@ packages_partners: []
 
 prometheus_mysql_cnf: /var/lib/prometheus/.my.cnf
 
+
+eshq_git_repo: https://github.com/ElasticHQ/elasticsearch-HQ.git
+eshq_version: v3.5.12
+eshq_root: /srv/rgm/elasticHQ/repo
+eshq_venv: /opt/pyvenv_eshq
+eshq_user: elastichq
+eshq_group: elastichq
+
+
 # patterns (regex) of Elsticsearch indexes to automatically close and delete with Curator
 # this is used in 'curator_actions.yml.j2' Jinja template
 curator_patterns:
@@ -140,7 +150,7 @@ rgm_services:
 - snmpd
 - snmptrapd
 - elasticsearch
-- mariadb
+- mariadbœ
 - metricbeat
 - influxdb
 - nagflux
@@ -334,3 +344,5 @@ oneliner_items:
 #  - https://artifacts.elastic.co/downloads/beats/metricbeat/metricbeat-oss-7.3.1-amd64.deb
 #  re_pattern: '^.*\/(?P<prefix>\w+-oss-).*(?P<suffix>-(x86_|amd)64.+)$'
 #  re_replace: '\g<prefix>latest\g<suffix>'
+
+es_group: elasticsearch
