--- a/tasks/grafana.yml
+++ b/tasks/grafana.yml
@@ -29,28 +29,6 @@
   - { mode: '0644', src: grafana/grafana_icon.svg, dest: /usr/share/grafana/public/img/grafana_icon.svg }
   - { mode: '0744', src: grafana/grafana_rgm.sh,   dest: /etc/grafana/grafana_rgm.sh }
 
-- name: install grafana dash templates
-  copy:
-    src: "grafana/{{ item }}"
-    dest: "{{ grafana_rgm_dashboards }}/{{ item }}"
-    owner: grafana
-    group: rgm
-    mode: 0644
-  with_items:
-  - 4any-k8s-monitoring.json
-  - active_directory_dns.json
-  - apache.json
-  - azure_compute.json
-  - azure_storage.json
-  - elasticsearch_cluster.json
-  - influxdb_internals.json
-  - multi-system-metrics.json
-  - mysql_percona.json
-  - prometheus_node_exporter.json
-  - prometheus_service.json
-  - realtime-containers-nodes-metrics.json
-  - vmware_stats.json
-
 - name: apply patches to align Grafana theme on RGM theme
   command: /etc/grafana/grafana_rgm.sh
   register: grafana_patch
@@ -116,6 +94,29 @@
   with_items:
   - { src: rgm_ds.yml.j2,   dest: datasources/rgm_ds.yaml }
   - { src: rgm_dash.yml.j2, dest: dashboards/rgm_dash.yaml }
+
+- name: install grafana dash templates
+  copy:
+    src: "grafana/{{ item }}"
+    dest: "/etc/grafana/provisioning/dashboards/{{ item }}"
+    owner: root
+    group: grafana
+    mode: 0640
+  with_items:
+  - 4any-k8s-monitoring.json
+  - active_directory_dns.json
+  - apache.json
+  - azure_compute.json
+  - azure_storage.json
+  - cadvisor_containers_nodes.json
+  - elasticsearch_cluster.json
+  - influxdb_internals.json
+  - multi-system-metrics.json
+  - mysql_percona.json
+  - nutanix.json
+  - prometheus_node_exporter.json
+  - prometheus_service.json
+  - vmware_stats.json
 
 - name: ensure grafana service is running
   systemd:
