fix RGM business activation

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -17,6 +17,9 @@ rgmweb_user: apache
 nagios_user: nagios
 prometheus_user: prometheus
 
+# RGM Business licensed customer id
+rgm_business_registration_id:
+
 # internal MariaDB user used by RGM applications
 mariadb_user: 'rgminternal'
 mariadb_pwd: '0rd0-c0m1735-b47h0n143'
