--- a/vars/main.yml
+++ b/vars/main.yml
@@ -125,6 +125,9 @@ packages_python36:
 # partners packages list (oracle, vmware, etc.) is built at run-time
 packages_partners: []
 
+# RGM repositories
+enable_rgm_repo_business: false
+
 prometheus_mysql_cnf: /var/lib/prometheus/.my.cnf
 
 
@@ -220,21 +223,21 @@ rgm_repositories:
   rgm-business-base:
     description: RGM Business Base Repository
     baseurl: https://business.repo.rgm-cloud.io/rgmb/latest/os/x86_64/
-    enabled: true
+    enabled: "{{ enable_rgm_repo_business }}"
     gpgcheck: true
     gpgkey: "file://{{ rgm_gpg_key }}"
     sslverify: true
-    sslclientcert: /etc/pki/tls/certs/CT1234-5678.CU1234-56789.crt
-    sslclientkey: /etc/pki/tls/private/CT1234-5678.CU1234-56789.key
+    sslclientcert: "/etc/pki/tls/certs/{{ rgm_business_registration_id }}.crt"
+    sslclientkey: "/etc/pki/tls/private/{{ rgm_business_registration_id }}.key"
   rgm-business-updates:
     description: RGM Business Updates Repository
     baseurl: https://business.repo.rgm-cloud.io/rgmb/latest/updates/x86_64/
-    enabled: true
+    enabled: "{{ enable_rgm_repo_business }}"
     gpgcheck: true
     gpgkey: "file://{{ rgm_gpg_key }}"
     sslverify: true
-    sslclientcert: /etc/pki/tls/certs/CT1234-5678.CU1234-56789.crt
-    sslclientkey: /etc/pki/tls/private/CT1234-5678.CU1234-56789.key
+    sslclientcert: "/etc/pki/tls/certs/{{ rgm_business_registration_id }}.crt"
+    sslclientkey: "/etc/pki/tls/private/{{ rgm_business_registration_id }}.key"
   rgm-partners-vmware:
     description: RGM Partner - VMWare
     baseurl: https://partners.repo.rgm-cloud.io/commercial/latest/vmware/
