add filebeat RPM package

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -59,6 +59,7 @@ packages_elastic:
 - elasticsearch-oss
 - elasticsearch-curator
 - metricbeat
+- filebeat
 - kibana-oss
 
 packages_influx_grafana:
