--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -55,9 +55,7 @@
 - name: service_restart_filebeat
   service:
     name: filebeat
-    state: restarted
-  when: filebeat_enabled
-
+    state: "{{ filebeat_enabled | ternary('restarted', 'stopped') }}"
 
 - name: service_restart_influxdb
   service:
