--- a/tasks/grafana.yml
+++ b/tasks/grafana.yml
@@ -186,7 +186,12 @@
 - name: Set 'Multi-System metrics' as default dashboard
   community.mysql.mysql_query:
     login_db: grafana
-    query: UPDATE preferences SET home_dashboard_id = %(id_graph)s WHERE org_id = 1 AND user_id = 0
+    query:
+      - INSERT INTO star (user_id, dashboard_id) VALUES (1, %(id_graph)s)
+      - INSERT INTO preferences (org_id,user_id,home_dashboard_id,created,updated,team_id) VALUES (1,0,%(id_graph)s,%(date)s,%(date)s,0)
     named_args:
       id_graph: "{{ grafana_default_dash_id.query_result[0][0].id }}"
+      date: 'now()'
   when: grafana_default_dash_id.rowcount[0] == 1
+
+  
