--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -52,6 +52,11 @@
     name: metricbeat
     state: restarted
 
+- name: service_restart_filebeat
+  service:
+    name: filebeat
+    state: "{{ filebeat_enabled | ternary('restarted', 'stopped') }}"
+
 - name: service_restart_influxdb
   service:
     name: influxdb
