grafana DSs now have a persistent UID grafana dashboards now packaged in RPM add helper function to manage Grafana default dashboard add ES service running verification add RHSM EPEL overriding in case of RHEL installation with Satellite

--- a/tasks/elastic_common_pre.yml
+++ b/tasks/elastic_common_pre.yml
@@ -11,10 +11,18 @@
     name: "{{ packages_elastic }}"
     state: present
 
-- name: force la suppression du sto ES
-  file:
-    path: /var/lib/elasticsearch/nodes
-    state: absent
+- block:
+
+  - name: ensure elasticsearch is enabled and started
+    systemd:
+      name: elasticsearch
+      state: stopped
+
+  - name: force la suppression du sto ES
+    file:
+      path: /var/lib/elasticsearch/nodes
+      state: absent
+
   when: force_delete_es is defined and force_delete_es
 
 - name: verifie l'existence du group RGM
